--- a/figma_to_html.html
+++ b/figma_to_html.html
@@ -1,23 +1,73 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB Service</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="figma_to_css.css">
 </head>
+
 <body>
-    <div class="top-section">
-        <h1>Experienced mobile and web applications and website builders measuring.</h1>
-        <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders measuring dozens of completed projects. We build and develop mobile applications for several top platforms, including Android  & IOS.</p>
-        <a href="#" class="our-btn btn-2">Contact us</a>
-        <a href="#" class="our-btn our-btn--outline">View more</a>
+
+    <nav>
+        <a href="#" class="logo">logo</a>
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about us</a></li>
+            <li><a href="#">services</a></li>
+            <li><a href="#">reviews</a></li>
+            <li><a href="#" class="our-btn">contact us</a></li>
+        </ul>
+    </nav>
+
+    <section class="hero">
+
+        <div class="par">
+            <h1>Experienced mobile and web applications and website builders measuring.</h1>
+            <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders
+                measuring dozens of completed projects. We build and develop mobile applications for several top
+                platforms,
+                including Android & IOS.</p>
+
+            <div class="ourbtn">
+                <a href="#" class="contactus">Contact us</a>
+                <a href="#" class="viewmore">View more</a>
+            </div>
+        </div>
+        <img src="./images/group 6.png">
+
+    </section>
+
+    <div class="services-icons">
+        <div>
+            <img src="./images/website-content 1.png" alt="">
+            <p>Lorem, ipsum dolor</p>
+
+        </div>
+        <div>
+            <img src="./images/seo-tag 1.png" alt="">
+            <p>Lorem, ipsum dolor</p>
+
+        </div>
+        <div>
+            <img src="./images/coding1.png" alt="">
+            <p>Lorem, ipsum dolor</p>
+
+        </div>
+        <div>
+            <img src="./images/immersive 1.png" alt="">
+            <p>Lorem, ipsum dolor</p>
+
+        </div>
     </div>
 
+
+
 </body>
+
 </html>
-
-
-    
